[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/menu/main_menu/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menu/title_screen/title_screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menu/main_menu_controller/main_menu_controller.gd" type="Script" id=3]
[ext_resource path="res://scenes/menu/levels_screen/levels_screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/shared/backgrounds.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menu/shine_select_screen/shine_select_screen.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/menu/splash_screen/splash_screen.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/menu/options.gd" type="Script" id=8]
[ext_resource path="res://scenes/shared/options.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/shared/controls_options.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/menu/search/search_screen.tscn" type="PackedScene" id=11]

[node name="MainMenuController" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.009
margin_bottom = 0.111969

[node name="Backgrounds" parent="Background" instance=ExtResource( 5 )]

[node name="InactiveScreens" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShineSelectScreen" parent="InactiveScreens" instance=ExtResource( 6 )]

[node name="LevelsScreen" parent="InactiveScreens" instance=ExtResource( 4 )]

[node name="MainMenuScreen" parent="InactiveScreens" instance=ExtResource( 1 )]

[node name="TitleScreen" parent="InactiveScreens" instance=ExtResource( 2 )]

[node name="MultiplayerOptions" parent="InactiveScreens" instance=ExtResource( 9 )]
script = ExtResource( 8 )

[node name="SplashScreen" parent="InactiveScreens" instance=ExtResource( 7 )]

[node name="ControlsOptions" parent="InactiveScreens" instance=ExtResource( 10 )]

[node name="SearchScreen" parent="InactiveScreens" instance=ExtResource( 11 )]
margin_right = 1537.0
margin_bottom = 862.0

[node name="ActiveScreens" type="Control" parent="."]
anchor_top = -0.00103124
anchor_right = 1.0
anchor_bottom = 0.998969
margin_top = -0.840912
margin_bottom = -0.840912
